Rollback to openjdk11